# poseDetect

./: .gitignore  AGENTS.md  MVS_CAMERA_GUIDE_ZH.md  README.md  README_ZH.md  STRUCT.md  WINDOWS_TEST_GUIDE.md  example.py  pyproject.toml
configs/: multi_camera_setup.example.json  mvs_camera_demo.example.json  runtime.example.json  runtime.multi_camera.example.json  runtime.multi_camera.mvs.json
docs/: IMPLEMENTATION_PLAN.md  MVS_CAMERA_USAGE.md  PROJECT_CAPABILITY_ASSESSMENT.md  PROJECT_STRUCTURE_AND_CONFIG_GUIDE.md  SEAT_REGION_CALIBRATION_GUIDE.md  VIDEO_INFERENCE_GUIDE.md  runtime.video.example.json
src/media_inputs/: __init__.py  core.py
src/mvsCamera/: Basicdemo.py  CamOperation_class.py  MvCameraControl_class.py  __init__.py  camera_controller.py  frame_source.py  pixel_utils.py  sdk_loader.py
src/seat_inspection/: __init__.py  __main__.py  calibration.py  camera_setup.py  cli.py  config.py  dataset_capture.py  engine.py  geometry.py  inference.py  main.py  multi_camera.py  mvs_camera_demo.py  person_detection.py  pipeline.py  pose_estimation.py  preprocessing.py  region_provider.py  reporting.py  rules.py  runtime_config.py  schemas.py  seat_detection.py  selection.py  state_machine.py  (+4 more)
tests/: test_calibration.py  test_camera_setup.py  test_dataset_capture.py  test_inference.py  test_main.py  test_media_inputs.py  test_multi_camera.py  test_mvs_camera_demo.py  test_mvs_frame_source.py  test_person_detection.py  test_pipeline.py  test_region_provider.py  test_reporting.py  test_rules.py  test_runtime_config.py  test_state_machine.py  test_tracking.py
(+2 files in other folders)
